--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+            {% include 'partial/header.html.twig' %}
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
