--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,6 +6,10 @@
     <h1>Liste des catégories</h1>
     <ul>
         {% for category in categories %}
-            <li><a href="{{path('app_category_show', {'id': category.id}) }}">{{ category.label }}</a></li>
+            <li><a href="{{path('app_category_show', {'id': category.id}) }}">{{ category.label }}</a> 
+                <a href="{{ path('app_category_delete', {'id': category.id}) }}">SUPPRIMER</a>
+                <a href="{{ path('app_category_edit', {'id': category.id}) }}">MODIFIER</a>
+            </li>
         {% endfor %}
+    </ul>
 {% endblock %}
