fixtures/pagination(getQbAll method)/FormSearchType

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,8 +3,10 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-<h1>Le Pannel Administrateur</h1>
+    <h1>Le Pannel Administrateur</h1>
 
-<h2>Les Catégories</h2>
-<a href="{{ path('app_category') }}">Cliquer ici</a>
+    <h2>Les Catégories</h2>
+    <a href="{{ path('app_category') }}">Cliquer ici</a>
+    <h2>Les Médias</h2>
+    <a href="{{ path('app_media') }}">Cliquer ici</a>
 {% endblock %}
