--- a/templates/media/index.html.twig
+++ b/templates/media/index.html.twig
@@ -15,6 +15,7 @@
     {{ form_start(form) }}
         {{ form_row(form.mediaTitle) }}
         {{ form_row(form.userEmail) }}
+        {{ form_row(form.mediaCreated) }}
         <button type="submit">Rechercher</button>
     {{ form_end(form) }}
     
