--- a/templates/media/add.html.twig
+++ b/templates/media/add.html.twig
@@ -6,7 +6,7 @@
   <h1>Ajouter un media</h1>
 
   {{ form_start(formMedia)}}
-    {{ form_row(formMedia.filePath) }}
+    {{ form_row(formMedia.file) }}
     {{ form_row(formMedia.title) }}
     {{ form_row(formMedia.description) }}
     {# {{ form_row(formMedia.user) }} #}
