sending demends + webpack encore install + filters

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -9,4 +9,6 @@
     <a href="{{ path('app_category') }}">Cliquer ici</a>
     <h2>Les Médias</h2>
     <a href="{{ path('app_media') }}">Cliquer ici</a>
+    <h2>Les Demandes</h2>
+    <a href="{{ path('app_demand_admin') }}">Cliquer ici</a>
 {% endblock %}
